Fix fret to letters spacing on state change

--- a/www/main.css
+++ b/www/main.css
@@ -193,3 +193,7 @@
 .natural, .sharp, .flat {
   display: none;
 }
+
+.question-note {
+  color: black;
+}
